force-app/main/default/objects/Resource_Assignment__c/Resource_Assignment__c.object-meta.xml
<CustomObject>
    <label>Resource Assignment</label>
    <pluralLabel>Resource Assignments</pluralLabel>
    <nameField>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
        <displayFormat>RPLAN-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>