force-app/main/default/objects/Resource_Assignment__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default></value>
            <value><fullName>Pipeline</fullName><default>false</default></value>
            <value><fullName>Tentative</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>