force-app/main/default/objects/Resource_Assignment__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contractor Assignments</relationshipLabel>
    <relationshipName>Contractor_Assignments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>