force-app/main/default/objects/Resource_Assignment__c/fields/Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Week__c</fullName>
    <label>Hours Per Week</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>