force-app/main/default/objects/Resource_Assignment__c/fields/Is_Derived__c.field-meta.xml
<CustomField>
    <fullName>Is_Derived__c</fullName>
    <label>Is Derived</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>True when auto-created from Sprint__c assignee fields on first board load.</description>
</CustomField>