force-app/main/default/objects/Resource_Assignment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Pipeline Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resource Assignments</relationshipLabel>
    <relationshipName>Resource_Assignments_Opp</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>