force-app/main/default/objects/Resource_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Project Lead</fullName><default>false</default></value>
            <value><fullName>Support Lead</fullName><default>false</default></value>
            <value><fullName>Contributor</fullName><default>true</default></value>
            <value><fullName>Contractor</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>