force-app/main/default/objects/Resource_Assignment__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Project</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Resource Assignments</relationshipLabel>
    <relationshipName>Resource_Assignments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>