force-app/main/default/objects/Resource_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>FTE Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resource Assignments</relationshipLabel>
    <relationshipName>Resource_Assignments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>